apacheを再起動する - CentOS 7を追加

--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,6 +1,6 @@
 <!-- header -->
 <div class="main">
   <h1>
-    <a href="/">Giblog Web Site</a>
+    <a href="/">CentOS入門 - CentOS入門ならPerlゼミのCentOS入門</a>
   </h1>
 </div>
