--- a/templates/index.html
+++ b/templates/index.html
@@ -4,4 +4,5 @@ CentOSの入門サイトです。CentOS 7以降の解説を追加予定です。
 
 <ul>
   <li><a href="/blog/20200203102632.html">apacheを再起動する - CentOS 7</a></li>
+  <li><a href="/blog/20200202102632.html">apacheの設定ファイルを編集する - CentOS 7</a></li>
 </ul>
