--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,11 @@
 
 CentOSの入門サイトです。CentOS 7以降の解説を追加予定です。
 
+<h3>Apache</h3>
+
 <ul>
   <li><a href="/blog/20200203102632.html">apacheを再起動する - CentOS 7</a></li>
   <li><a href="/blog/20200202102632.html">apacheの設定ファイルを編集する - CentOS 7</a></li>
+  <li><a href="/blog/20200203120019.html">apacheのアクセスログの場所 - CentOS 7</a></li>
+  <li><a href="/blog/20200131120019.html">apacheのエラーログの場所 - CentOS 7</a></li>
 </ul>
