apacheの設定ファイルの試験を追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,4 +15,5 @@ CentOSの入門サイトです。CentOS 7以降の解説を追加予定です。
   <li><a href="/blog/20200203120019.html">apacheのアクセスログの場所 - CentOS 7</a></li>
   <li><a href="/blog/20200131120019.html">apacheのエラーログの場所 - CentOS 7</a></li>
   <li><a href="/blog/20200128102632.html">Apacheの起動・再起動・停止をログで確認する - CentOS 7</a></li>
+  <li><a href="/blog/20200127102632.html">Apacheの設定ファイルをテストする - CentOS 7</a></li>
 </ul>
