--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,12 @@ CentOSの入門サイトです。CentOS 7以降の解説を追加予定です。
   <li><a href="/blog/20200204080644.html">CentOSのマイナーバージョンをアップデートする - CentOS 7, CentOS 8</a></li>
 </ul>
 
+<h3>アプリケーションとライブラリのインストール</h3>
+
+<ul>
+  <li><a href="/blog/20200210101036.html">ImageMagickをインストールする - CentOS7, CentOS 8</a></li>
+</ul>
+
 <h3>Apache - Webサーバー</h3>
 
 <ul>
