フォントファイルのディレクトリを追加

--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -15,6 +15,6 @@
   <ul>
     <li><a href="https://tutorial.perlzemi.com/">テキスト処理と正規表現ならPerl入門ゼミ</a></li>
     <li><a href="https://linux.perlzemi.com/">Linuxコマンドを覚えるならLinuxサーバー管理入門</a></li>
-    <li><a href="https://web.perlzemi.com/">Web開発ならMojoliciousスタートアップ</a></li>
+    <li><a href="https://web.perlzemi.com/">Webシステム開発入門 Perl+Mojolicious</a></li>
   </ul>
 </div>
