--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,23 @@
-<h2>CentOS入門 - CentOS入門ならPerlゼミのCentOS入門</h2>
+<h2>CentOS入門 - CentOSならPerlゼミ</h2>
 
 CentOSの入門サイトです。CentOS 7以降の解説を追加予定です。
 
 <h3>OSアップデート</h3>
 
 <ul>
-  <li><a href="/blog/20200204080644.html">CentOSのマイナーバージョンをアップデートする - CentOS 7, CentOS 8</a></li>
+  <li><a href="/blog/20200204080644.html">CentOSのマイナーバージョンをアップデートする - CentOS7, CentOS8</a></li>
 </ul>
 
 <h3>アプリケーションとライブラリのインストール</h3>
 
 <ul>
-  <li><a href="/blog/20200210101036.html">ImageMagickをインストールする - CentOS7, CentOS 8</a></li>
+  <li><a href="/blog/20200210101036.html">ImageMagickをインストールする - CentOS7, CentOS8</a></li>
+</ul>
+
+<h3>フォント</h3>
+
+<ul>
+  <li><a href="/blog/20200317114157.html">フォントファイルのディレクトリ - CentOS7, CentOS8</a></li>
 </ul>
 
 <h3>Apache - Webサーバー</h3>
