サイト名をCetnOSサーバー構築入門に変更

--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,6 +1,6 @@
 <!-- header -->
 <div class="main">
   <h1>
-    <a href="/">CentOS入門 - CentOSならPerlゼミ</a>
+    <a href="/">CentOSサーバー構築入門 - CentOSでPerl Webシステム開発</a>
   </h1>
 </div>
