--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,27 @@
 <h2>CentOSサーバー構築入門</h2>
 
-CentOSの入門サイトです。CentOS 7以降の解説を追加予定です。
+<b>CentOSサーバー構築入門</b>では、CentOSを使って、PerlによるWebシステム開発環境を構築するための手順を紹介します。Linux仮想マシン上に、スケーラブルで、リアルタイムWeb対応のWebアプリケーションを比較的簡単に構築できることは、Perl Webシステム開発の特徴です。
+
+CentOS上にWebサーバーを構築、PerlのWebアプリケーションを作って、Webサーバーからリバースプロキシでつなぐ設定して、外部へ公開できるところまでを解説します。
+
+CentOSサーバー構築入門は、<a href="https://tutorial.perlzemi.com/">Perlシステム開発</a>の木本システム株式会社のITエンジニアの研修教材を公開したものです。<a href="https://web.perlzemi.com/">Webシステム開発</a>・業務システム開発の現場で実際に使われている内容が中心となっています。
+
+このサイトの最終更新年は2020年です。研修教材は、2020年に実務で使え、長期的なトレンドに合うことを目指して、作られています。
+
+2020年7月29日現在、CentOSのバージョンは、CentOS 7で確認していますが、特別な注記がない限り、CentOS 8でも、動作すると想定しています。
+
+<h3>パッケージ管理</h3>
+
+<ul>
+  <li><a href="/blog/20200529085516.html">CentOSにおけるパッケージ管理</a></li>
+</ul>
+
+<h3>Redisサーバー - 揮発性データ保存サーバー</h3>
+
+<ul>
+  <li><a href="/blog/20200225174004.html">Redisサーバーの起動・停止・再起動・状態確認</a></li>
+  <li><a href="/blog/20200720125704.html">redis-cli - RedisクライアントからRedisコマンドを実行する</a></li>
+</ul>
 
 <h3>OSアップデート</h3>
 
