--- a/templates/common/bottom.html
+++ b/templates/common/bottom.html
@@ -1,1 +1,9 @@
 <!-- bottom -->
+
+<h3>CentOS+PerlでWebシステム開発 環境構築のご紹介</h3>
+
+<div class="youtube_block">
+  <div class="youtube">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BV-QTIdBSVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
