--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,2 +1,11 @@
-<!-- footer -->
-<a href="https://kimoto-system.co.jp/message">サイト運営 木本システム <br>Copyright © 2020-2020 Yuki Kimoto</a>
+<div class="what_is_this_site">
+  <div class="inside">
+    現在このサイトは、ほぼ書きかけの状態です。<a href="https://linux.perlzemi.com/">Linux</a>ディストリビューションの一つであるCentOSをを使って<a href="https://tutorial.perlzemi.com/">Perl</a>のWebシステム開発環境を構築するための手順を記述しています。<br><a href="https://mojolicious.perlzemi.com/">Mojolicious</a>を使った<a href="https://websystem.perlzemi.com/">Webアプリケーション</a>を実行して、ドメイン取得を行って、Webサービスをサービスを実際に公開するまでを解説。Webシステム開発環境は、<a href="https://datascience.perlzemi.com/">データ分析</a>を行うためのデータ分析基盤、<a href="https://c.perlzemi.com/">C言語</a>の開発環境としても利用できます。
+  </div>
+</div>
+
+<div class="perlri_link">
+  <a href="http://www.perlri.com">
+    Copyright © Perl総合研究所
+  </a>
+</div>
