--- a/templates/static/css/common.css
+++ b/templates/static/css/common.css
@@ -75,6 +75,7 @@
     letter-spacing:1px;
     font-size:18px;
     cursor:pointer;
+    text-decoration:underline;
   }
   .footer .perlri_link a:hover {
     opacity:0.8;
