--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,6 +1,6 @@
 <!-- header -->
 <div class="main">
   <h1>
-    <a href="/">CentOSサーバー構築入門 - CentOSでPerl Webシステム開発</a>
+    <a href="/">CentOS+Perl Webシステム開発環境構築入門</a>
   </h1>
 </div>
