--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<h2>CentOSサーバー構築入門</h2>
+<h2>CentOS+Perl Webシステム開発環境構築入門</h2>
 
 <b>CentOSサーバー構築入門</b>では、CentOSを使って、PerlによるWebシステム開発環境を構築するための手順を紹介します。Linux仮想マシン上に、スケーラブルで、リアルタイムWeb対応のWebアプリケーションを比較的簡単に構築できることは、Perl Webシステム開発の特徴です。
 
