GeckoDriverをインストールするを追加

--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -11,22 +11,10 @@
 </div>
 
 <div class="side-list" style="margin-top:30px">
-  <div class="side-list-title">
-    関連リンク
-  </div>
   <div class="side-list-title" style="margin-top:30px">
-    Webシステム開発
+    コンテンツ提供
   </div>
   <ul>
-    <li><a href="https://tutorial.perlzemi.com/">Perlプログラミングを学ぶ</a></li>
-    <li><a href="https://linux.perlzemi.com/">Linuxの仕組み・コマンドを学ぶ</a></li>
-    <li><a href="https://web.perlzemi.com/">Webシステム開発を学ぶ</a></li>
-  </ul>
-
-  <div class="side-list-title" style="margin-top:30px">
-    Webシステム開発の見積もり
-  </div>
-  <ul>
-    <li><a href="https://kimoto-system.co.jp/">Perl Webシステム開発の<br>木本システム株式会社</a></li>
+    <li><a href="http://www.perlri.com/">Perl総合研究所</li>
   </ul>
 </div>
