リンクを微修正

--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -4,7 +4,7 @@
     コンテンツ提供
   </div>
   <ul>
-    <li><a href="http://www.perlri.com/">Perl総合研究所</li>
+    <li><a href="http://www.perlri.com/">Perl総合研究所</a></li>
   </ul>
 </div>
 
