ChromeのインストールとChromeDriverのインストールを追加

--- a/templates/blog/20210106090837.html
+++ b/templates/blog/20210106090837.html
@@ -1,6 +1,6 @@
-<h2>Firfoxをインストールする - CentOS 7</h2>
+<h2>Firefoxをインストールする - CentOS 7</h2>
 
-Firefoxをyumコマンドをインストールします。CentOS 7で試しました。
+Firefoxをyumコマンドでインストールします。CentOS 7で試しました。
 
 <pre>
 yum -y install firefox
