--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -6,6 +6,9 @@
 
 <div class="perlri_link">
   <a href="http://www.perlri.com">
-    Perl元気塾
+    プログラミングスクール<br>Perl元気塾
   </a>
 </div>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4525414114581084"
+     crossorigin="anonymous"></script>
