CentOSのサイトに広告を追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,3 +58,13 @@ CentOSサーバー構築入門は、<a href="https://tutorial.perlzemi.com/">Per
   <li><a href="/blog/20200126080644.html">ApacheでIP認証とベーシック認証を組み合わせる - CentOS 7</a></li>
   <li><a href="/blog/20200116182708.html">htpasswd - Apacheベーシック認証のパスワードファイルの作成 - CentOS 7</a></li>
 </ul>
+
+<h3>関連講座</h3>
+
+<ul>
+  <li><a href="https://linux-perl-genki.com/">Linux入門講座</a></li>
+  <li><a href="https://web-application-perl-genki.com/">Web開発講座</a></li>
+  <li><a href="https://mojolicious-tutorial.com/">Webフレームワーク Mojolicious</a></li>
+  <li><a href="https://datascience.perlzemi.com/">データ分析入門</a></li>
+  <li><a href="https://c-language-perl-genki.com/">C言語入門</a></li>
+</ul>
