--- a/templates/common/bottom.html
+++ b/templates/common/bottom.html
@@ -8,10 +8,17 @@
   </div>
 </div>
 
-<div style="text-align:center;margin-top:30px;font-weight:bold;font-size:22px;">
-Webシステム開発の基礎であるPerlテキスト処理を学べる教材
+<div style="width:calc(100% - 30px);margin:0 auto;">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4525414114581084"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-3+1f-3d+2z"
+     data-ad-client="ca-pub-4525414114581084"
+     data-ad-slot="6080873486"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
-<div style="text-align:center;margin-top:30px;">
-  <a href="https://www.perlri.com/book/perl_text_essense" rel="nofollow"><img src="https://tutorial.perlzemi.com/images/book/perl_text_essence.jpg" style="width:260px;margin:0 auto;"></a><br><a href="https://www.perlri.com/book/perl_text_essense" rel="nofollow" style="font-size:20px;">Perlテキスト処理のエッセンス発売中</a>
 
-</div>
