--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -1,30 +1,51 @@
 <!-- side -->
-<div class="side-list">
-  <div class="side-list-title">
-    講座作成
+<div class="side_list">
+  <div class="side_list_title">
+    CentOS講座作成
   </div>
   <ul>
-    <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="120" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>Perl元気塾</a></li>
-  </ul>
-  <div class="side-list-title" style="margin-top:30px;">
-    Perlテキスト処理のエッセンス
-  </div>
-  <ul>
-    <li style="text-align:center;">
-      <a rel="nofollow" href="https://www.perlri.com/book/perl_text_essense"><img src="https://tutorial.perlzemi.com/images/book/perl_text_essence.jpg" width="160"></a><br>
-      <a rel="nofollow" href="https://www.perlri.com/book/perl_text_essense">Perlテキスト処理のエッセンス</a><br>
-      Webシステム開発の基礎であるPerlテキスト処理を学べる教材
-    </li>
+    <li style="text-align:center;padding-left:0"><a rel="nofollow" href="http://www.perlri.com/"><img width="120" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>ゆとりある<br>エンジニアライフを創造中<br>Perl元気塾</a></li>
   </ul>
 </div>
 
-<div class="side-list" style="margin-top:30px">
-  <div class="side-list-title">
-    目次
+<div class="side_list">
+  <div class="side_list_title">
+    CentOS講座目次
   </div>
   <ul>
-    <li><a href="/">CentOSサーバー構築入門</a></li>
-    <li><a href="/blog/20200529085516.html">パッケージ管理</a></li>
-    <li><a href="/list.html">新着情報</a></li>
+    <li><a rel="nofollow" href="/">CentOSサーバー構築入門</a></li>
+    <li><a rel="nofollow" href="/blog/20200529085516.html">パッケージ管理</a></li>
+    <li><a rel="nofollow" href="/list.html">新着情報</a></li>
   </ul>
+</div>
+
+<div class="side_list">
+  <div class="side_list_title">
+    プロのWeb開発者になる方法
+  </div>
+  <div class="side_list_body">
+    <ul>
+      <li>
+        <div style="text-align:center;margin-bottom:5px;">
+          <a rel="nofollow" href="https://perlri.com/job" target="_blank">プロのWeb開発者になるための<br>仕事の探し方・選び方</a>
+        </div>
+<!-- サイドバー -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4525414114581084"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-3+1f-3d+2z"
+     data-ad-client="ca-pub-4525414114581084"
+     data-ad-slot="6384959968"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>        <!-- 
+        <div>
+          <img src="/images/ad/ad_image_example.png">
+        </div>
+        -->
+      </li>
+    </ul>
+  </div>
 </div>
