--- a/templates/static/css/common.css
+++ b/templates/static/css/common.css
@@ -13,10 +13,14 @@
   
   /* header */
   .header {
+    max-width:1030px;
+    width:100%;
     margin:0 auto;
     background:#fff;
     margin-bottom:15px;
     border-bottom:5px solid #D9D9D9;
+    display:flex;
+    flex-wrap:wrap;
   }
   
   .footer {
@@ -107,7 +111,7 @@
   
   /* main */
   .main {
-    max-width:960px;
+    max-width:1030px;
     width:100%;
     margin: 0 auto;
     padding:0 5px;
@@ -121,7 +125,7 @@
   /* content */
   .content {
     float:left;
-    width:calc(100% - 280px - 30px);
+    width:calc(100% - 320px - 30px);
   }
   
   /* entry */
@@ -137,7 +141,7 @@
   /* side */
   .side {
     float:left;
-    width:280px;
+    width:320px;
     margin-left:30px;
     padding-top:16px;
   }
@@ -150,12 +154,18 @@
     padding:19px 10px 15px 73px;
     background:url(/images/giblog-logo.png) no-repeat 10px 15px;
     background-size:48px;
+    width:50%;
   }
   h1 a, h1 a:visited {
     color:white;
     text-decoration:none;
     color:#333;
   }
+  .header_description {
+    padding-top:10px;
+    width:50%;
+  }
+
   h2 {
     font-size:24px;
     margin:10px 0;
@@ -235,10 +245,11 @@
   .before-days {
     text-align:center;
   }
-  .side-list {
+  .side_list {
     box-shadow: 0 0 3px rgba(0,0,0,.1);
+    margin-bottom:30px;
   }
-  .side-list-title {
+  .side_list_title {
     background:#009D82;
     color:white;
     font-weight:bold;
@@ -247,10 +258,10 @@
     border:1px solid #E5E5E5;
     border-bottom:none;
   }
-  .side-list ul {
+  .side_list ul {
     border:1px solid #ccc;
   }
-  .side-list li {
+  .side_list li {
     list-style:none;
     background:white;
     border-bottom:1px solid #E5E5E5;
@@ -272,5 +283,12 @@
     float:none;
     width:97%;
     margin:0 auto;
+  }
+  h1 {
+    width:100%;
+  }
+  .header_description {
+    text-align:center;
+    width:100%;
   }
 }
