デザインを最新版に調整

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,8 @@
-<h2>CentOS+Perl Webシステム開発環境構築入門</h2>
+<h2>CentOS開発環境構築  - Perl Web開発環境構築</h2>
 
-<b>CentOSサーバー構築入門</b>では、CentOSを使って、PerlによるWebシステム開発環境を構築するための手順を紹介します。Linux仮想マシン上に、スケーラブルで、リアルタイムWeb対応のWebアプリケーションを比較的簡単に構築できることは、Perl Webシステム開発の特徴です。
+<b>CentOS開発環境構築</b>は、CentOSを使って、PerlによるWebシステム開発環境を構築するための手順を紹介します。Linux仮想マシン上に、スケーラブルで、リアルタイムWeb対応のWebアプリケーションを比較的簡単に構築できることは、Perl Webシステム開発の特徴です。
 
 CentOS上にWebサーバーを構築、PerlのWebアプリケーションを作って、Webサーバーからリバースプロキシでつなぐ設定して、外部へ公開できるところまでを解説します。
-
-CentOSサーバー構築入門は、<a href="https://tutorial.perlzemi.com/">Perlシステム開発</a>の木本システム株式会社のITエンジニアの研修教材を公開したものです。<a href="https://web.perlzemi.com/">Webシステム開発</a>・業務システム開発の現場で実際に使われている内容が中心となっています。
-
-このサイトの最終更新年は2020年です。研修教材は、2020年に実務で使え、長期的なトレンドに合うことを目指して、作られています。
 
 2020年7月29日現在、CentOSのバージョンは、CentOS 7で確認していますが、特別な注記がない限り、CentOS 8でも、動作すると想定しています。
 
@@ -59,12 +55,52 @@ CentOSサーバー構築入門は、<a href="https://tutorial.perlzemi.com/">Per
   <li><a href="/blog/20200116182708.html">htpasswd - Apacheベーシック認証のパスワードファイルの作成 - CentOS 7</a></li>
 </ul>
 
-<h3>関連講座</h3>
+<h3>Webシステム開発のための関連講座</h3>
+
+このサイトのすべての記事は以下にあります。
 
 <ul>
-  <li><a href="https://linux-perl-genki.com/">Linux入門講座</a></li>
-  <li><a href="https://web-application-perl-genki.com/">Web開発講座</a></li>
-  <li><a href="https://mojolicious-tutorial.com/">Webフレームワーク Mojolicious</a></li>
-  <li><a href="https://datascience.perlzemi.com/">データ分析入門</a></li>
-  <li><a href="https://c-language-perl-genki.com/">C言語入門</a></li>
+  <li><a href="/all.html">すべての記事を見る</a></li>
+</ul>
+
+またWebシステム開発環境を作成した後に、実際にWebシステム開発ができるようになるための関連講座を用意していますので、ご活用ください。
+
+<h4>Weアプリケーション開発入門</h4>
+
+Perlの基礎がわかっていて、すぐにWebアプリケーション開発を始めたいならこちら(かなり未完成)。
+
+<ul>
+  <li><a href="https://websystem.perlzemi.com/">Perl Webアプリケーション開発入門</a></li>
+</ul>
+
+<h4>Perlプログラミング入門</h4>
+
+Perlの基礎を学んでテキスト処理やライブラリ開発を行いたいならこちら。
+
+<ul>
+  <li><a href="https://perlzemi.com/">Perlゼミ - Perlプログラミング入門</a></li>
+</ul>
+
+<h4>Webデザイン入門</h4>
+
+HTML・CSS・JavaScriptなどWebデザインの基礎について学びたい方はこちら。
+
+<ul>
+  <li><a href="https://web-html-css-perl-genki.com/">Webデザイン入門 - HTML・CSS・JavaScriptの基本</a></li>
+</ul>
+
+<h4>Linuxサーバー管理入門</h4>
+
+viテキストエディタや基本的なLinuxコマンド、Linuxの仕組みについて学びたい方はこちら。
+
+<ul>
+  <li><a href="https://linux-perl-genki.com/">Linuxサーバー管理入門</a></li>
+</ul>
+
+<h4>データベース入門</h4>
+
+MariaDBデータベースの環境構築やSQLの実行について学びたい方はこちら(かなり未完成)。
+
+<ul>
+  <li><a href="https://mariadb-perl-genki.com/">MariaDB入門 - データベース入門</a></li>
 </ul>
