--- a/templates/static/css/common.css
+++ b/templates/static/css/common.css
@@ -11,16 +11,58 @@
     color:#0000EE;
   }
   
-  /* header */
+  /* ヘッダ */
   .header {
-    max-width:1030px;
     width:100%;
-    margin:0 auto;
-    background:#fff;
-    margin-bottom:15px;
-    border-bottom:5px solid #D9D9D9;
+    border-bottom:2px solid #cccccc;
+    margin-bottom:5px;
+    background:white;
+  }
+  .header_main {
+    width:100%;
+    max-width:1030px;
     display:flex;
-    flex-wrap:wrap;
+    margin:0 auto;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-family: “Calibri”,”メイリオ”,Meiryo,”ヒラギノ角ゴ Pro W3″,Hiragino Kaku Gothic Pro,”ＭＳ Ｐゴシック”,sans-serif; 
+  }
+  h1 {
+    font-family: “Calibri”,”メイリオ”,Meiryo,”ヒラギノ角ゴ Pro W3″,Hiragino Kaku Gothic Pro,”ＭＳ Ｐゴシック”,sans-serif; 
+    padding: 5px 15px 9px 15px;
+    color:#333;
+    font-family: "times new roman", "geogia", serif;
+    float:left;
+    width:75%;
+    display:inline-block;
+    padding:5px 10px 7px 10px;
+  }
+  h1 a, h1 a:visited {
+    color:#333;
+    text-decoration:underline;
+    font-weight:bold;
+    letter-spacing:1px;
+    font-size:20px;
+    text-decoration:none;
+  }
+  h1 img {
+    width:40px;
+    vertical-align:-12px;
+    margin-right:10px;
+  }
+  .header_right {
+    width:25%;
+    text-align:right;
+  }
+  .header_right a,.header_right a:visited {
+    display:inline-block;
+    background:#FF4DA0;
+    color:white;
+    text-decoration:none;
+    padding:15px 25px 10px 25px;
+    text-align:center;
+    font-weight:bold;
+    height:100%;
   }
   
   .footer {
@@ -138,40 +180,57 @@
     line-height:1.5;
   }
   
-  /* side */
+  /* サイドバー */
   .side {
-    float:left;
+    float:right;
     width:320px;
-    margin-left:30px;
-    padding-top:16px;
+    padding-top:12px;
   }
-  
-  /* tags */
-  h1 {
-    max-width:1020px;
-    width:100%;
-    font-size:28px;
-    padding:19px 10px 15px 73px;
-    background:url(/images/giblog-logo.png) no-repeat 10px 15px;
-    background-size:48px;
-    width:50%;
+  .side_list {
   }
-  h1 a, h1 a:visited {
+  .side_list_title {
+    background:#2F5597;
     color:white;
-    text-decoration:none;
-    color:#333;
+    font-weight:bold;
+    padding: 11px 0px 9px 0px;
+    text-align:center;
+    border:1px solid #0070C0;
+    border-bottom:none;
   }
-  .header_description {
-    padding-top:10px;
-    width:50%;
+  .side_list_body {
+    text-align:center;
+    letter-spacing:1px;    
+    font-weight:bold;
+    line-height:1.5;
+    font-size:16px;
   }
 
+  .side_list_image img {
+    width:200px;
+  }
+  .side_list ul {
+    margin-bottom:30px;
+  }
+  .side_list li {
+    list-style:none;
+    background:white;
+    border:1px solid #D0D0DA;
+    border-bottom:none;
+    padding:12px 0px 10px 15px;
+  }
+  .side_list li:last-child {
+    border-bottom:1px solid #D0D0DA;
+  }
+  .side_list li:first-child {
+    border-top:none;
+  }
+  
   h2 {
     font-size:24px;
     margin:10px 0;
     padding-left:20px;
     letter-spacing:0.5px;
-    border-left:8px solid #00A78C;
+    border-left:8px solid #2F5597;
   }
   h2 a, h2 a:visited {
     text-decoration:none;
@@ -179,7 +238,7 @@
   }
   h3 {
     font-size:20px;
-    border-top:4px solid #ddd;
+    border-top:4px solid #2F5597;
     padding:16px 0px 15px 18px;
     letter-spacing:0.5px;
     margin:15px 0 10px 0;
@@ -245,50 +304,64 @@
   .before-days {
     text-align:center;
   }
-  .side_list {
-    box-shadow: 0 0 3px rgba(0,0,0,.1);
-    margin-bottom:30px;
+
+  .perlclub_register {
+    width:calc(100% - 30%);
+    max-width:500px;
+    margin:50px auto;
   }
-  .side_list_title {
-    background:#009D82;
-    color:white;
-    font-weight:bold;
-    padding: 12px 0px 10px 0px;
+  .perlclub_register a {
+    line-height:1.9;
     text-align:center;
-    border:1px solid #E5E5E5;
-    border-bottom:none;
+    font-weight:bold;
+    font-size:19px;
+    display:block;
+    padding:33px 30px;
+    background:#FF4DA0;
+    text-decoration:none;
+    border-radius:5px;
+    color:white;
   }
-  .side_list ul {
-    border:1px solid #ccc;
+  .perlclub_register a:hover {
+    opacity:0.8;
+  }
+  
+  
+/* Tablet and Smart phone */
+@media only screen and (max-width:1030px) {
+  .content {
+    margin:0;
+    padding:0;
+    width:100%;
+    height:auto;
+    overflow:visible;
+  }
+  .hide-smartphone {
+    display:none;
+  }
+  
+  /* ヘッダ */
+  .header_main, h2,h4,h5, p, pre {
+    margin-left:auto;
+    margin-right:auto;
+  }
+  .header_right a,.header_right a:visited {
+    padding:15px 10px 10px 10px;
+  }
+  
+  /* サイドバー */
+  .side {
+    margin:0;
+    padding:0;
+    width:100%;
+    height:auto;
+    overflow:visible;
   }
   .side_list li {
-    list-style:none;
-    background:white;
-    border-bottom:1px solid #E5E5E5;
-    padding:12px 0px 10px 15px;
+    border-left:none;
+    border-right:none;
   }
-  .side li:last-child {
+  .side_list li:last-child {
     border-bottom:none;
-  }
-
-/* Tablet and Smart phone */
-@media only screen and (max-width:960px) {
-  .content {
-    float:none;
-    width:97%;
-    margin:0 auto;
-    margin-bottom:15px;
-  }
-  .side {
-    float:none;
-    width:97%;
-    margin:0 auto;
-  }
-  h1 {
-    width:100%;
-  }
-  .header_description {
-    text-align:center;
-    width:100%;
   }
 }
