LinuxのURLを最新のものへ

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@ HTML・CSS・JavaScriptなどWebデザインの基礎について学びたい方
 viテキストエディタや基本的なLinuxコマンド、Linuxの仕組みについて学びたい方はこちら。
 
 <ul>
-  <li><a href="https://linux-perl-genki.com/">Linuxサーバー管理入門</a></li>
+  <li><a href="https://linux.perlclub.net/">Linuxサーバー管理入門</a></li>
 </ul>
 
 <h4>データベース入門</h4>
