--- a/templates/blog/20200117182708.html
+++ b/templates/blog/20200117182708.html
@@ -56,7 +56,7 @@ app->start;
 hypnotoad myapp.pl
 </pre>
 
-<a href="https://web.perlzemi.com/">Mojolicious</a>のhypnotoadサーバーのデフォルトのポートは10000ですが、ポート番号を指定したい場合は「hypnotoad.conf」を編集します。
+<a href="https://webapp.perlzemi.com/">Mojolicious</a>のhypnotoadサーバーのデフォルトのポートは10000ですが、ポート番号を指定したい場合は「hypnotoad.conf」を編集します。
 
 <h3>SSL証明書を取得する</h3>
 
