--- a/templates/blog/20210104090837.html
+++ b/templates/blog/20210104090837.html
@@ -47,4 +47,4 @@ google-chrome --disable-setuid-sandbox --no-sandbox --headless --disable-gpu --d
 
 <h3>JavaScript対応のWebスクレイピングをPerlで行うには?</h3>
 
-JavaScript対応のWebスクレイピングをPerlで行うにはGoogle Chromeに加えて、<a href="/blog/20210103090837.html">ChromeDriverのインストール</a>と<a href="https://tutorial.perlzemi.com/blog/20091116124667.html">Perlモジュール</a>の<a href="https://tutorial.perlzemi.com/blog/20210105145700.html">Selenium::Remote::Driver</a>が必要です。
+JavaScript対応のWebスクレイピングをPerlで行うにはGoogle Chromeに加えて、<a href="/blog/20210103090837.html">ChromeDriverのインストール</a>と<a href="https://perlzemi.com/blog/20091116124667.html">Perlモジュール</a>の<a href="https://perlzemi.com/blog/20210105145700.html">Selenium::Remote::Driver</a>が必要です。
