--- a/templates/blog/20210105090837.html
+++ b/templates/blog/20210105090837.html
@@ -37,4 +37,4 @@ geckodriver 0.26.0 (e9783a644016 2019-10-10 13:38 +0000)
 
 <h3>JavaScript対応のWebスクレイピングをPerlで行うには?</h3>
 
-JavaScript対応のWebスクレイピングをPerlで行うには<a href="/blog/20210106090837.html">Firfoxのインストール</a>と<a href="https://tutorial.perlzemi.com/blog/20091116124667.html">Perlモジュール</a>の<a href="https://tutorial.perlzemi.com/blog/20210105145700.html">Selenium::Remote::Driver</a>も必要です。
+JavaScript対応のWebスクレイピングをPerlで行うには<a href="/blog/20210106090837.html">Firfoxのインストール</a>と<a href="https://perlzemi.com/blog/20091116124667.html">Perlモジュール</a>の<a href="https://perlzemi.com/blog/20210105145700.html">Selenium::Remote::Driver</a>も必要です。
