--- a/templates/blog/20210106090837.html
+++ b/templates/blog/20210106090837.html
@@ -20,4 +20,4 @@ firefox -headless -screenshot https://developer.mozilla.com
 
 <h3>JavaScript対応のWebスクレイピングをPerlで行うには?</h3>
 
-JavaScript対応のWebスクレイピングをPerlで行うにはFirefoxに加えて、<a href="/blog/20210105090837.html">GeckoDriverのインストール</a>と<a href="https://tutorial.perlzemi.com/blog/20091116124667.html">Perlモジュール</a>の<a href="https://tutorial.perlzemi.com/blog/20210105145700.html">Selenium::Remote::Driver</a>が必要です。
+JavaScript対応のWebスクレイピングをPerlで行うにはFirefoxに加えて、<a href="/blog/20210105090837.html">GeckoDriverのインストール</a>と<a href="https://perlzemi.com/blog/20091116124667.html">Perlモジュール</a>の<a href="https://perlzemi.com/blog/20210105145700.html">Selenium::Remote::Driver</a>が必要です。
