アナリティクスのタグを更新

--- a/templates/common/meta.html
+++ b/templates/common/meta.html
@@ -25,11 +25,11 @@
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R4VDT0Z6QB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NREC71BDNY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-R4VDT0Z6QB');
+  gtag('config', 'G-NREC71BDNY');
 </script>
