URLを正しいものにした

--- a/templates/blog/20200128102632.html
+++ b/templates/blog/20200128102632.html
@@ -26,7 +26,7 @@ journalctl -r -u httpd
 
 <h3>末尾を自動で取得</h3>
 
-ログの末尾を自動で取得し<a href="https://linux.perlclub.net/blog/20200203124238.html">tailコマンド</a>の「-f」オプションのような動作をさせるには「-f」オプションを使用します。
+ログの末尾を自動で取得し<a href="https://linux.perlzemi.com/blog/20200203124238.html">tailコマンド</a>の「-f」オプションのような動作をさせるには「-f」オプションを使用します。
 
 <pre>
 journalctl -f -u httpd
