--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@ CentOSに関連する情報です。
 viテキストエディタや基本的なLinuxコマンド、Linuxの仕組みについて学びたい方はこちら。
 
 <ul>
-  <li><a href="https://linux.perlclub.net/">Linuxサーバー管理入門</a></li>
+  <li><a href="https://linux.perlzemi.com/">Linuxサーバー管理入門</a></li>
 </ul>
 
 <h4>Linuxディストリビューション</h4>
