--- a/templates/blog/20200225174004.html
+++ b/templates/blog/20200225174004.html
@@ -94,7 +94,7 @@ Jul 29 09:19:06 tk2-261-40258.vs.sakura.ne.jp systemd[1]: Starting Redis persist
 
 Redisのsystemdの設定ファイルは「systemctl status redis」で見れます。
 
-設定ファイルを<a href="https://linux.perlclub.net/blog/20200113083613.html">catコマンド</a>で見てみましょう。
+設定ファイルを<a href="https://linux.perlzemi.com/blog/20200113083613.html">catコマンド</a>で見てみましょう。
 
 <pre>
 cat /lib/systemd/system/redis.service
